Fix alignment with tweet box

--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -72,7 +72,6 @@ textarea {
   .tweet-box {
     width: 90%;
     margin-top: 12px;
-    align-self: center;
   }
   
 }
